# multilingual-agreement-and-saes

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/feature_discovery_dataset/: deu_generated.tsv  deu_generated_min.tsv  eng_generated.tsv  eng_generated_min.tsv  spa_generated.tsv  spa_generated_min.tsv
data/multiblimp/_hf_cache/deu/: data.tsv
data/multiblimp/_hf_cache/eng/: data.tsv
data/multiblimp_extended/: deu.tsv  eng.tsv  spa.tsv
data/number_pairs/: deu_same_verb.tsv  eng_same_verb.tsv  spa_same_verb.tsv
notebooks/: 01_competence_check.ipynb  02_generate_number_pairs.ipynb  03_generate_feature_discovery_dataset.ipynb
src/data/: discovery_generation.py  discovery_pairs.py  multiblimp.py  number_pairs.py
src/evaluation/: _syntaxgym_prediction.py  causal_validation.py  competence.py  feature_discovery.py  syntaxgym.py
src/model/: loading.py
src/utils/: config.py  logging.py
